<resources>
    <string name="app_name">CompanyMeetingSchedulerApp</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="ok">OK</string>
    <string name="error_message">All field is not valid</string>
    <string name="date_validation">End time can not be greater then start time</string>
    <string name="slot_available">Slot available</string>
    <string name="slot_not_available">Slot not available</string>
    <string name="select_time">Select Time</string>
    <string name="schedule_a_meeting">Schedule A Meeting</string>
    <string name="back">Back</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>
